--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,8 +34,8 @@ body {
 .logo {
   margin-top: 36px;
   margin-bottom: 12px;
-  height: 120px;
-  max-width: 340px;
+  height: 180px;
+  max-width: 510px;
   width: auto;
   display: block;
 }
